Safari bug at contact section fixed; changed label at resume link.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li>Know how to code is half way done, the rest are design patterns and developing for the next.</li>
                     </ul>
                 </blockquote>
-                <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">Check out my portfolio in PDF</a>
+                <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">Check out my resume in PDF</a>
             </section>
             <section id="skills" class="section container">
                 <header>
