Minor changes to Conversion Chef prototype; added problem, solution, process and result sections at each project; removed skills section and added latest work at index; minor changes in app.css

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="landing-nav nav navbar-nav" role="navigation">
+                            <li><a href="#latest-work">Latest work</a></li>
                             <li><a href="#about">About me</a></li>
-                            <li><a href="#skills">Knowledge</a></li>
                             <li><a href="#testimonials">Testimonials</a></li>
                             <li><a href="#hire">Hire</a></li>
                         </ul>
@@ -46,6 +46,37 @@
             </div>
         </header>
         <main role="main">
+            <section id="latest-work" class="section container">
+                <header>
+                    <hgroup>
+                        <h1>Latest Work</h1>
+                        <h2>These are my most recent work</h2>
+                    </hgroup>
+                </header>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 portfolio-item">
+                        <a href="projects/musicar.html">
+                            <img src="assets/images/product/musicar/project-thumbnail.png" alt="Thumbnail of the project Musicat | Miniatura do projeto Musicar" class="img-reponsive img-thumbnail">
+                            <strong>Musicar</strong>
+                        </a>
+                        <span>Mobile app to help music students and teachers to connect with each other</span>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 portfolio-item">
+                        <a href="projects/santander.html">
+                            <img src="assets/images/product/santander_redesign/project-thumbnail.png" alt="Thumbnail of the project Santander Mobile | Miniatura do projeto Santander Mobile" class="img-reponsive img-thumbnail">
+                            <strong>Santander mobile</strong>
+                        </a>
+                        <span>Concept of a new payment flow on the mobile app of Santander internet banking</span>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 portfolio-item">
+                        <a href="projects/conversion-chef.html">
+                            <img src="assets/images/product/conversion_chef/project-thumbnail.png" alt="Thumbnail of the project Conversion Chef | Miniatura do projeto Conversion Chef" class="img-reponsive img-thumbnail">
+                            <strong>Conversion Chef</strong>
+                        </a>
+                        <span>Development of a website for the CRO consulting agency Conversion Chef</span>
+                    </div>
+                </div>
+            </section>
             <section id="about" class="section container">
                 <header>
                     <hgroup>
@@ -68,52 +99,6 @@
                     </ul>
                 </blockquote>
                 <a href="downloads/henrique-freitas-souza-resume.pdf" target="_blank">Check out my resume in PDF</a>
-            </section>
-            <section id="skills" class="section container">
-                <header>
-                    <hgroup>
-                        <h1>Knowledge</h1>
-                        <h2>Work with design processes and tools, put my hands on code and prototype business solutions are my specialties.</h2>
-                    </hgroup>
-                </header>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="skill-item">
-                            <strong>UX Design</strong>
-                            <span class="pull-right">* * * *</span>
-                        </div>
-                        <div class="skill-item">
-                            <strong>UI Design</strong>
-                            <span class="pull-right">* * *</span>
-                        </div>
-                        <div class="skill-item">
-                            <strong>Rapid Prototyping</strong>
-                            <span class="pull-right">* * * * *</span>
-                        </div>
-                        <div class="skill-item">
-                            <strong>Design Thinking</strong>
-                            <span class="pull-right">* * *</span>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="skill-item">
-                            <strong>Agile Methodologies</strong>
-                            <span class="pull-right">* * *</span>
-                        </div>
-                        <div class="skill-item">
-                            <strong>Adobe CC</strong>
-                            <span class="pull-right">* * * *</span>
-                        </div>
-                        <div class="skill-item">
-                            <strong>Front end</strong>
-                            <span class="pull-right">* * * * *</span>
-                        </div>
-                        <div class="skill-item">
-                            <strong>Programming</strong>
-                            <span class="pull-right">* * *</span>
-                        </div>
-                    </div>
-                </div>
             </section>
             <section id="testimonials" class="section container">
                 <header>
