--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="nav navbar-nav" role="navigation">
+                            <li><a href="index.html#latest-work">Latest work</a></li>
                             <li><a href="index.html#about">About me</a></li>
-                            <li><a href="index.html#skills">Knowledge</a></li>
                             <li><a href="index.html#testimonials">Testimonials</a></li>
                             <li><a href="index.html#hire">Hire</a></li>
                         </ul>
@@ -52,16 +52,16 @@
                     </ol>
                     <hgroup>
                         <h1>Projects</h1>
-                        <h2>Check out my main work, the characteristics of each and the final product delivered.</h2>
+                        <h2>Check out my main work, the characteristics of each project and the final product delivered.</h2>
                     </hgroup>
                 </header>
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 portfolio-item">
                         <a href="projects/personal-website.html">
                             <img src="assets/images/product/personal_website/project-thumbnail.png" alt="Thumbnail of the project My Portfolio | Miniatura do projeto Meu Portfolio" class="img-reponsive img-thumbnail">
-                            <strong>My portfolio</strong>
+                            <strong>Personal Branding</strong>
                         </a>
-                        <span>Development of a web portfolio with UX projects</span>
+                        <span>Development of a website to show my personal branding and UI/UX Portfolio</span>
                     </div>
                     <div class="col-xs-12 col-sm-4 portfolio-item">
                         <a href="projects/musicar.html">
