--- a/projects/conversion-chef.html
+++ b/projects/conversion-chef.html
@@ -40,8 +40,8 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="nav navbar-nav" role="navigation">
+                            <li><a href="../index.html#latest-work">Latest work</a></li>
                             <li><a href="../index.html#about">About me</a></li>
-                            <li><a href="../index.html#skills">Knowledge</a></li>
                             <li><a href="../index.html#testimonials">Testimonials</a></li>
                             <li><a href="../index.html#hire">Hire</a></li>
                         </ul>
@@ -128,6 +128,22 @@
                                 <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/blog.png" alt="Conversion Chef - Blog" class="img-responsive img-thumbnail">
                             </div>
                             <strong>Blog</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/home_big_screen.png">
+                            <div>
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/home_big_screen.png" alt="Conversion Chef - Home Big Screen" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Home Big Screen</strong>
+                        </a>
+                    </div>
+                    <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                        <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/servicos_big_screen.png">
+                            <div>
+                                <img src="../assets/images/product/conversion_chef/wireframe/thumbnail/servicos_big_screen.png" alt="Conversion Chef - Serviços Big Screen" class="img-responsive img-thumbnail">
+                            </div>
+                            <strong>Serviços Big Screen</strong>
                         </a>
                     </div>
                 </div>
