--- a/projects/musicar.html
+++ b/projects/musicar.html
@@ -40,8 +40,8 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="nav navbar-nav" role="navigation">
+                            <li><a href="../index.html#latest-work">Latest work</a></li>
                             <li><a href="../index.html#about">About me</a></li>
-                            <li><a href="../index.html#skills">Knowledge</a></li>
                             <li><a href="../index.html#testimonials">Testimonials</a></li>
                             <li><a href="../index.html#hire">Hire</a></li>
                         </ul>
@@ -65,17 +65,25 @@
                         <h2>What is it: a mobile application that connects music teachers and students based on their location.</h2>
                     </hgroup>
                 </header>
-                <p class="portfolio-item-description">Musicar is a mobile application that makes it easy to connect music students and teachers who're seeking to schedule classes. This project was developed with the help of a multinational music company. To validate the solution, were developed a low fidelity prototype and a landing page to collect the emails from interested people. The solution was presented at Expo Music 2016.</p>
+                <h3>Challenge</h3>
+                <p>The music community is one of the less included when the subject is technology, and according to Sebrae, on its last <a href="http://www.bibliotecas.sebrae.com.br/chronus/ARQUIVOS_CHRONUS/bds/bds.nsf/e491dcf107479d1628190fceb77085f9/$File/5810.pdf" target="_blank">report</a> about the music industry, stated that some of the main reasons are the poor technological education and the lack of investments in the sector. Within the industry there's the education, composed by musicians who aren't familiar with technological resources to manage their classes and autonomous career and thus don't know how to use technology to find students. On the other hand the music students are composed mainly of young people who are more comfortable with technology and use it to learn an instrument. Musicar aims to connect these tech savvy music students with teacher so they can teach and learn together and create a strong educational community.</p>
+                <h3>Solution</h3>
+                <p>We've built the concept of a mobile application to connect music teachers and students through geolocalization. To help teachers, the main feature was the recommendation system, as recommendation is the only way teachers find new students today. We've also built a landing page to collect e-mails from interested people. Our solution was presented at Expo Music 2016 in a booth sponsored by Santo Angelo.</p>
                 <div class="alert alert-success">
                     <strong>Achievments: </strong>
                     <ul>
-                        <li>Saved money by understanding that the customers wouldn't buy the solution without coding it;</li>
+                        <li>Saved money by understanding that the customers wouldn't buy the solution without having to code it;</li>
                     </ul>
                 </div>
+                <h3>Process</h3>
+                <p>The adopted process was to research, build and test. In the research phase, we've discovered who our personas are and interviewed both teachers and students at a music school to find out how they learn today and how technology is used before, during and after the process. For teachers, we've also learned how they find new students and prepare classes. For this project, we've also identified a third persona that is not directly involved in the process, but is equally important which is the parent: most students are dependant on their parents, who sponsor their children's classes.</p>
+                <p>After having a good understanding of our personas we've developed a landing page showing the benefits of the application for our users and offering them the chance to be part of the first users to test the MVP. This landing page was shared on Facebook ads and Google ads and we've collected statistic data about our audience's response.</p>
+                <p>We've had a very low acceptance in the first version of the page and a bounce rate of 95%, 18 subscriptions and more than 60.000 views on the combined ads from Facebook and Google. We've learned that the landing page was too big, slow to load on mobile devices and not very optimized for mobile as well. More than 90% of the Facebook users came from mobile. After learning this we've rebuilt the landing page with only the essential content and an interaction design, as we're invited by Santo Angelo to expose our solution at Expo Music. The second attempt failed again, as we've had no subscriptions, but the interaction design was very intuitive for those who tested the solution. Minor changes were recorded as we're receiving feedback.</p>
+                <h3>Result</h3>
+                <p>The first landing page was built using WordPress with a theme modified by our team. To increase the performance and remove unnecessary resources from the application, the final landing page was built from scratch using some of the Google Material Design processes through the framework Materialize. This was done to make users feel more familiar with the interface, as they've had experience with some of the elements on mobile devices in the past. The mobile mock-ups were built focusing on the interaction rather than the visual. We've focused on testing the match interaction, where teachers and students find each other, as this is the core functionality that makes the MVP.</p>
                 <div class="alert alert-info">
                     <strong>Interaction design: </strong><a href="https://invis.io/QP8KSQB5G" target="_blank">https://invis.io/QP8KSQB5G</a>
                 </div>
-                <h3>Principais mockups</h3>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/musicar/mockup/home.png">
