--- a/projects/personal-website.html
+++ b/projects/personal-website.html
@@ -40,8 +40,8 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="nav navbar-nav" role="navigation">
+                            <li><a href="../index.html#latest-work">Latest work</a></li>
                             <li><a href="../index.html#about">About me</a></li>
-                            <li><a href="../index.html#skills">Knowledge</a></li>
                             <li><a href="../index.html#testimonials">Testimonials</a></li>
                             <li><a href="../index.html#hire">Hire</a></li>
                         </ul>
@@ -58,21 +58,29 @@
                     <ol class="breadcrumb">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../portfolio.html">Portfolio</a></li>
-                        <li class="active"><span>My portfolio</span></li>
+                        <li class="active"><span>Personal Branding</span></li>
                     </ol>
                     <hgroup>
-                        <h1>My portfolio</h1>
-                        <h2>What is it: a portfolio with UX/UI Design works.</h2>
+                        <h1>Personal Branding</h1>
+                        <h2>What is it: a website to show my personal brand and my UX/UI portfolio.</h2>
                     </hgroup>
                 </header>
-                <p class="portfolio-item-description">My portfolio was designed to help HR managers and design leaders that need to evaluate the profile and knowledge of candidates for jobs that they need to fill. All of the site information was placed in such a way that recruiters find first my portfolio and then my personal information. This arrangement is a complement to the content at LinkedIn, channel from where most recruiters come from before arrive at the portfolio site.</p>
-                <div class="alert alert-success">
+                <h3>Challenge</h3>
+                <p>Brazil is facing a very high unemployment rate due to the economic crisis, with something like 12 million people without a job as per most recent IBGE (Brazilian Institute of Geography and Statistics) report. The most affected are people with a bachelor degree, which is my case. With higher competition, professionals need to show even more skills and cultural fit for companies to be hired.</p>
+                <h3>Solution</h3>
+                <p>In order to be noticed by HR managers and heads of design at startups I've built a personal brand along the last four months. To easily share my brand, I've built a website. My personal website is the main point of that brand and is meant to share my most relevant information, as well as my UI/UX work, for startups looking to expand their teams.</p>
+                <div class="portfolio-achievments alert alert-success">
                     <strong>Achievments: </strong>
                     <ul>
                         <li>HR and design managers can scan my profile within less time and be more productive;</li>
                     </ul>
                 </div>
-                <h3>Main mockups</h3>
+                <h3>Process</h3>
+                <p>The process was done in three steps: research, development and test. I did online research to know more about recruiters for startups and the hiring process. I've learned about the Applicant Tracking Systems and how they help my persona and their journey, which I've called search to hire. At the end of the research phase I had a clear understanding about my persona's needs and pain points.</p>
+                <p>After researching, I've started to create the copywriting and the information architecture, testing different possibilities on wireframes. After finding a suitable content arrangement, I've developed a high fidelity prototype using HTML and CSS.</p>
+                <p>I've sent the prototype in a couple of job postings and turned the Analytics on with some metrics to check which projects and links were opened. The objectives of the test was to know how easy was to navigate through the website and what kind of content they wanted to see most. This was measured by following the clicked links to check which pages were open and the average time spent on each.</p>
+                <h3>Result</h3>
+                <p>After the first two months of statistic analysis this website has an average of 10 daily visits and each visitor stays around 6 minutes. This data is collected through Google Analytics. The users come from controlled sources and mainly from direct access, as they're referred by my other profiles on social networks or business cards after face to face meetings. The product is in constant evolution, as new usage data is collected. The following are the final mock-up and wireframes that were created during the development phase.</p>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/personal_website/mockup/home.png">
@@ -82,9 +90,6 @@
                             <strong>Home page</strong>
                         </a>
                     </div>
-                </div>
-                <h3>Main wireframes</h3>
-                <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/personal_website/wireframe/home.png">
                             <div>
