--- a/projects/santander.html
+++ b/projects/santander.html
@@ -40,8 +40,8 @@
 
                     <div class="collapse navbar-collapse" id="main-nav">
                         <ul class="nav navbar-nav" role="navigation">
+                            <li><a href="../index.html#latest-work">Latest work</a></li>
                             <li><a href="../index.html#about">About me</a></li>
-                            <li><a href="../index.html#skills">Knowledge</a></li>
                             <li><a href="../index.html#testimonials">Testimonials</a></li>
                             <li><a href="../index.html#hire">Hire</a></li>
                         </ul>
@@ -65,7 +65,10 @@
                         <h2>What is it: A complete redesign of the payment flow of the Santander internet banking mobile application.</h2>
                     </hgroup>
                 </header>
-                <p class="portfolio-item-description">This work is the result of weeks using the Santander mobile application and watching the people that use it as well. The goal of the redesign is to simplify the payment flow using the smartphone. The main changes were the removal of the security card, following the digital banks, and the simplification of data collection at every step that it is required. The user interface was redesigned to evidence that the user is walking through a process. The visual elements follow the interface guidelides defined by Apple and Google at their specifications and contain elements that are already familiar for most users.</p>
+                <h3>Challenge</h3>
+                <p>Santander is one of the largest banks in Brazil. They have an internet banking through which users can do a variety of transactions without having to go to an agency. One of the most common transactions is to pay accounts. With the rise of mobile applications and the internet banking for smartphones and tablets the transaction had some changes to use resources available on those devices but the process remained the same. Digital banks arosed and redefined the banking institutions, as well as the internet banking, simplifying financial management. The traditional banks are feeling the pressure to innovate and they're working to stay competitive in the new reality. Recently, some of the major banks in Brazil announced the <a href="http://conteudo.startse.com.br/mercado/juniorboneli/bancos-se-rendem-ao-sucesso-do-nubank-e-fortalecem-area-de-inovacao/" target="_blank">creation of innovative departments</a>. Given this scenario and the fact that I've had trouble trying to use the mobile internet banking, I've proposed a solution to change significantly one of the most used transactions and make the internet banking stay competitive against the digital banks.</p>
+                <h3>Solution</h3>
+                <p>The mobile application was redesigned to simplify the transactions. The main goal was to reduce the complexity of the payment flow on the app. Since the screens are smaller users can't see much of the content they see on wider screens so the content was reorganized to be shown in small and meaningful chunks without scrolling. Many links in the web application go to the same places, these were removed from the mobile application. Another main change is that the application is strongly tied to the Human Interface Guidelines developed by Apple. The guideline provided many elements already familiar to users that were tested by the company and thus reducing the cognitive load to understand how the application works. The main screen displays all the available options in a list format with a comfortable amount of space to hit each block with the thumb. The most common options were placed at the bottom of the list, being more accessible to the thumbs. Tabs were avoided to reduce the effort to reach them and to avoid tab horizontal scrolling. Another major change was the removal of the security card, a card with numbers given by the bank to use before finishing each transaction. To replace this interaction, the new application asks for the password using the same application keyboard used to log in into the system.</p>
                 <div class="alert alert-success">
                     <strong>Achievments: </strong>
                     <ul>
@@ -73,10 +76,14 @@
                         <li>Less cognitive efforts for the users by having known elements of their operational systems;</li>
                     </ul>
                 </div>
+                <h3>Process</h3>
+                <p>The process was divided in two steps: research and development. I've started the research thinking about the details of my own process when making a payment through the app. Then I watched another two people on my social circles to perform the same action to see how they do it, without explicitly saying that I was performing a research. I was able to register their actions and some thoughts when trying to perform the desired action and gather data to build a more assertive solution.</p>
+                <p>After the research phase I've designed wireframes using some of the content already available on the internet banking. I've created a content inventory and removed what was redundant, as well as unnecessary information to pay an account. I've tried some arrangements until I was able to place all the information needed at each screen without scrolling and helping to tell a story, which is a way to say to users that they're performing a payment process and some information are required. After visualizing the wireframes done, I've designed a mock-up using the Human Interface Guidelines and the brand styleguide.</p>
+                <h3>Result</h3>
+                <p>The final product has a higher affordance and it is easier to navigate across the steps of the process, as all screens have indicators to go back and forward using elements of the Human Interface Guideline. The security card was removed so users don't need to carry a card just to use the internet banking. Fields to specify who's receiving and who's paying the account were removed as these can be extracted from the account after scanning the barcode. The receipt can be sent to an email with one tap and if an e-mail isn't registered it is easier to register without leaving the receipt screen. Important moments in the process have big and accessible buttons to confirm and cancel the operation, making it easy for the user to undo any mistakes and aware him that He's about to perform an important operation, one that can cause trouble if done wrong.</p>
                 <div class="alert alert-info">
                     <strong>Interaction design: </strong><a href="https://invis.io/ZH9LBBPTB" target="_blank">https://invis.io/ZH9LBBPTB</a>
                 </div>
-                <h3>Main mockups</h3>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/mockup/login_ios.png">
@@ -139,7 +146,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/mockup/thumbnail/confirmar_senha_ios.png" alt="Santander Mobile - Confirm password | Santander Mobile - Confirmar senha" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Confirm password</strong>
+                            <strong>Confirm</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -147,7 +154,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/mockup/thumbnail/pagamento_realizado_ios.png" alt="Santander Mobile - Payment confirmed | Santander Mobile - Pagamento confirmado" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Confirmed payment</strong>
+                            <strong>Confirmed</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -158,9 +165,6 @@
                             <strong>Sent email</strong>
                         </a>
                     </div>
-                </div>
-                <h3>Main wireframes</h3>
-                <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/santander_redesign/wireframe/initial_screen.png">
                             <div>
@@ -214,7 +218,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/wireframe/thumbnail/confirm_password.png" alt="Santander Mobile - Confirm password | Santander Mobile - Confirmar senha" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Confirm password</strong>
+                            <strong>Confirm</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -222,7 +226,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/wireframe/thumbnail/payment_confirmed.png" alt="Santander Mobile - Payment confirmed | Santander Mobile - Pagamento confirmado" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Payment confirmed</strong>
+                            <strong>Confirmed</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
@@ -230,7 +234,7 @@
                             <div>
                                 <img src="../assets/images/product/santander_redesign/wireframe/thumbnail/visualize_confirmation.png" alt="Santander Mobile - Visualize receipt | Santander Mobile - Visualizar comprovante" class="img-responsive img-thumbnail">
                             </div>
-                            <strong>Visualize receipt</strong>
+                            <strong>Receipt</strong>
                         </a>
                     </div>
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
