Minor changes and bug fixes; new resume added and description changes at portfolio items and index.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <header>
                     <hgroup>
                         <h1>Latest Work</h1>
-                        <h2>These are my most recent work</h2>
+                        <h2>Check out what I've been doing lately with my UX skills</h2>
                     </hgroup>
                 </header>
                 <div class="row">
@@ -88,7 +88,7 @@
                     <img src="assets/images/profile-photo.jpg" alt="Sou o Henrique e sou um UX designer." class="img-responsive">
                 </div>
                 <p>After more than six years of career I've done many different things, all with the same objective: help people to achieve their business goals by understanding and using technology. I've worked as a graphic designer for web and printed media, full stack developer, systems analyst, infrastructure analyst and project manager. Although very different, each of my experiences helps me to be a better UX professional and for that I face my work as a group of everything I have ever done in my professional life. My bachelor in Information Technology by FIAP also adds many points to that.</p>
-                <p>I've worked with UX on freelance projects and specialized myself in design by Gama Academy. Nowadays I work as a UX Designer at Conversion Chef, a consulting agency whose goal is to spread the Conversion Rate Optimization practices in Brazil.</p>
+                <p>I've worked with UX on freelance projects and specialized myself in design by Gama Academy. Nowadays I work as a UX Designer at a consulting agency.</p>
                 <p>I love Internet of Things and EdTechs. My dream is to build fantastic experiences that really contribute to help individuals and groups to have a better education.</p>
                 <p>My career and studies are guided by the following premises:</p>
                 <blockquote class="alert alert-info">
@@ -165,6 +165,7 @@
           })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
           ga('create', 'UA-87608325-1', 'auto');
+          ga('create', 'UA-87608325-1', {'siteSpeedSampleRate': 100});
           ga('send', 'pageview');
         </script>
     </body>
