--- a/projects/conversion-chef.html
+++ b/projects/conversion-chef.html
@@ -72,7 +72,7 @@
                         <li>The site will be the main channel of conversion from Conversion Chef;</li>
                     </ul>
                 </div>
-                <h3>Main wireframes</h3>
+                <h3>Result</h3>
                 <div class="row">
                     <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                         <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/wireframe/home.png">
