New image added in Conversion Chef project.

--- a/projects/conversion-chef.html
+++ b/projects/conversion-chef.html
@@ -75,9 +75,17 @@
                 <h3>Result</h3>
                 <div class="row">
                   <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
+                      <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/mockup/conversion_chef_web.png">
+                          <div>
+                              <img src="../assets/images/product/conversion_chef/mockup/thumbnail/conversion_chef_web.png" alt="Conversion Chef - Home Web" class="img-responsive img-thumbnail">
+                          </div>
+                          <strong>Web Home</strong>
+                      </a>
+                  </div>
+                  <div class="portfolio-product col-xs-12 col-sm-4 col-md-3 col-lg-2">
                       <a href="#" class="portfolio-product-item" data-toggle="modal" data-target="#portfolio-modal" data-src="../assets/images/product/conversion_chef/mockup/conversion_chef_mobile.png">
                           <div>
-                              <img src="../assets/images/product/conversion_chef/mockup/thumbnail/conversion_chef_mobile.png" alt="Conversion Chef - Home" class="img-responsive img-thumbnail">
+                              <img src="../assets/images/product/conversion_chef/mockup/thumbnail/conversion_chef_mobile.png" alt="Conversion Chef - Home Mobile" class="img-responsive img-thumbnail">
                           </div>
                           <strong>Mobile Home</strong>
                       </a>
